updating jvm heap memory to be able to read huge scene files